# solver

./: .gitignore  CMakeLists.txt  readme.MD  solver.pc.in
include/: ODE45.h  RKF78.h  logger.h  observers.h  runge_cutta.h  solver.h
include/backends/: ode45_backend.h  rk4_backend.h  rkf78_backend.h
include/framework/: default_runtime.h  model_buffers.h  model_runner.h  model_types.h  solver_events.h  solver_plugin.h  solver_runtime.h  validation_mapping.h  validation_metrics.h  validation_model.h  validation_types.h
include/models/: harmonic_oscillator.h
src/: ODE45.c  RKF78.c  logger.c  observers.c  runge_kutta.c  solver.c  solver_dispatch.c  solver_dispatch.h
src/backends/: ode45_backend.c  rk4_backend.c  rkf78_backend.c
src/framework/: default_runtime.c  model_buffers.c  model_runner.c  solver_plugin_manager.c  solver_runtime.c  validation_mapping.c  validation_metrics.c  validation_model.c
src/models/: harmonic_oscillator.c
tests/: test_default_runtime.c  test_model_buffers.c  test_model_runner.c  test_plugin_stop.c  test_solver.c  test_solver_accuracy.c  test_solver_scalar_api.c  test_solver_vector_api.c  test_support.h  test_validation_metrics.c
